--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xcontext-receivers"]
     }
 
     //如果不想生成某个布局的绑定类，可以在根视图添加 tools:viewBindingIgnore="true" 属性。
