--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion AppConfig.compileSdkVersion
+    namespace "com.android.base.app"
+    compileSdk AppConfig.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion AppConfig.minSdkVersion
-        targetSdkVersion AppConfig.targetSdkVersion
+        minSdk AppConfig.minSdkVersion
+        targetSdk AppConfig.compileSdkVersion
         versionCode AppConfig.versionCode
         versionName AppConfig.versionName
     }
@@ -18,12 +19,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
         freeCompilerArgs = ["-Xcontext-receivers"]
     }
 
