--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "com.android.library"
-    id "kotlin-android"
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.jetbrains.kotlin.android)
 }
 
 android {
@@ -32,24 +32,25 @@ android {
 
 dependencies {
     //AndroidX
-    api AndroidLibraries.annotations
-    api AndroidLibraries.archRuntime
-    api AndroidLibraries.archCommon
-    api AndroidLibraries.lifecycleCommon
-    api AndroidLibraries.lifecycleCommonJava8
-    api AndroidLibraries.lifecycleRuntimeKtx
-    api AndroidLibraries.lifecycleLiveDataCore
-    api AndroidLibraries.lifecycleLiveKtx
-    api AndroidLibraries.lifecycleViewModelKtx
-    api AndroidLibraries.lifecycleReactiveStreams
-    api AndroidLibraries.lifecycleProcess
+    api libs.androidx.annotations
+    api libs.androidx.arch.runtime
+    api libs.androidx.arch.common
+    api libs.androidx.lifecycle.common
+    api libs.androidx.lifecycle.common.java8
+
+    api libs.androidx.lifecycle.runtime.ktx
+    api libs.androidx.lifecycle.livedata.core
+    api libs.androidx.lifecycle.livedata.ktx
+    api libs.androidx.lifecycle.viewmodel.ktx
+    api libs.androidx.lifecycle.reactivestreams
+    api libs.androidx.lifecycle.process
 
     //Kotlin
-    api KotlinLibraries.kotlinStdlib
-    api KotlinLibraries.kotlinReflect
-    api KotlinLibraries.kotlinCoroutines
-    api KotlinLibraries.kotlinAndroidCoroutines
+    api libs.kotlin.stdlib
+    api libs.kotlin.reflect
+    api libs.kotlinx.coroutines
+    api libs.kotlinx.coroutines.android
 
     //Log
-    api ThirdLibraries.timber
+    api libs.jakewharton.timber
 }
