--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
-POM_ARTIFACT_ID=android-arch-base
-POM_NAME=android-arch-base
+GROUP=com.android.base
+POM_ARTIFACT_ID=android-arch-core
+POM_NAME=android-arch-core
 VERSION_NAME=1.0.0
